--- a/index.html
+++ b/index.html
@@ -5,39 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perpustakaan ANNISA</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-        .container {
-            margin: 20px auto;
-            max-width: 800px;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-        .ebook-list {
-            list-style: none;
-            padding: 0;
-        }
-        .ebook-list li {
-            padding: 10px;
-            background: #007BFF;
-            margin: 5px 0;
-            color: white;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        iframe {
-            width: 100%;
-            height: 500px;
-            border: none;
-            margin-top: 20px;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -49,11 +16,10 @@
     </header>
     <main>
         <h2>Selamat Datang di Perpustakaan Annisa!</h2>
-        <div class="gif-container">
+<div class="gif-container">
             <img src="animasi-bergerak-perpustakaan-0005.gif" alt="Perpustakaan Annisa" class="responsive-gif">
         </div>
-        <p>
-            "Selamat datang di Perpustakaan Annisa! Sebagai bagian dari upaya pengembangan ilmu dan pendidikan, perpustakaan ini hadir untuk memberikan berbagai sumber referensi yang dapat mendukung pembelajaran, penelitian, dan eksplorasi akademik. Kami percaya bahwa pengetahuan adalah kunci utama untuk membuka peluang masa depan yang lebih cerah. Semoga Anda menemukan manfaat dari setiap informasi yang tersedia di sini!"
+           "Selamat datang di Perpustakaan Annisa! Sebagai bagian dari upaya pengembangan ilmu dan pendidikan, perpustakaan ini hadir untuk memberikan berbagai sumber referensi yang dapat mendukung pembelajaran, penelitian, dan eksplorasi akademik. Kami percaya bahwa pengetahuan adalah kunci utama untuk membuka peluang masa depan yang lebih cerah. Semoga Anda menemukan manfaat dari setiap informasi yang tersedia di sini!"
         </p>
         <h3>Kerja Sama dan Referensi</h3>
         <a href="http://pustaka.unp.ac.id/kki/" target="_blank">Perpustakaan Universitas Negeri Padang</a>
@@ -61,11 +27,8 @@
     <footer>
         <p>© 2025 Annisa Fitriani</p>
     </footer>
-    <script>
-        function openEbook(file) {
-            document.getElementById('ebookViewer').src = file;
-        }
-    </script>
+    
+    <!-- Menyisipkan script.js -->
     <script src="script.js"></script>
 </body>
 </html>
