--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>Rekomendasi Buku</h2>
         <div class="container">
             <div class="book">
-                <a href="https://link-ke-ebook1.pdf" target="Empat Langkah Pengampunan">
+                <a href="https://drive.google.com/file/d/1wNBCOEhe2u6DJo5f7wy75618LmNaveuh/view?usp=drive_link" target="Empat Langkah Pengampunan">
                     <img src="tn_4stepscover-indonesian.jpg" alt="Google Resume">
                 </a>
                 <p>Google Resume</p>
