--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
         <div class="container">
             <div class="book">
                 <a href="https://drive.google.com/file/d/1wNBCOEhe2u6DJo5f7wy75618LmNaveuh/view?usp=drive_link" target="Empat Langkah Pengampunan">
-                    <img src="tn_4stepscover-indonesian.jpg" alt="Google Resume">
+                    <img src="tn_4stepscover-indonesian.jpg" alt="Empat Langkah Pengampunan">
                 </a>
+                </div>
+        <div class="book">
+            <a href="https://drive.google.com/file/d/1eES0l8At0OLHqTR9gsCO77oSaDBYg73-/view?usp=drive_link" target="Islam's Reformers">
+                <img src="cover2.jpg" alt="Islam's Reformers">
+                Filosofi Teras
+            </a>
                 <p>Google Resume</p>
             </div>
         </div>
