--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
         <div class="book">
             <a href="https://drive.google.com/file/d/1eES0l8At0OLHqTR9gsCO77oSaDBYg73-/view?usp=drive_link" target="Islam's Reformers">
-                <img src="cover2.jpg" alt="Islam's Reformers">
+                <img src="B023.png" alt="Islam's Reformers">
                 Filosofi Teras
             </a>
                 <p>Google Resume</p>
