--- a/index.html
+++ b/index.html
@@ -26,21 +26,22 @@
     </main>
     <!-- Rekomendasi Buku -->
     <section id="rekomendasi-buku">
-        <h2>Rekomendasi Buku</h2>
-        <div class="container">
-            <div class="book">
-                <a href="https://drive.google.com/file/d/1wNBCOEhe2u6DJo5f7wy75618LmNaveuh/view?usp=drive_link" target="Empat Langkah Pengampunan">
-                    <img src="tn_4stepscover-indonesian.jpg" alt="Empat Langkah Pengampunan">
-                </a>
-                </div>
+    <h2>Rekomendasi Buku</h2>
+    <div class="container">
         <div class="book">
-            <a href="https://drive.google.com/file/d/1eES0l8At0OLHqTR9gsCO77oSaDBYg73-/view?usp=drive_link" target="Islam's Reformers">
-                <img src="B023.png" alt="Islam's Reformers">
+            <a href="https://link-ke-ebook1.pdf" target="_blank">
+                <img src="cover1.jpg" alt="Empat Langkah Pengampunan">
             </a>
-                <p>Google Resume</p>
-            </div>
+            <p>Empat Langkah Pengampunan</p>
         </div>
-    </section>
+        <div class="book">
+            <a href="https://link-ke-ebook2.pdf" target="_blank">
+                <img src="cover2.jpg" alt="Islam’s Reformers">
+            </a>
+            <p>Islam’s Reformers</p>
+        </div>
+    </div>
+</section>
     <footer>
         <p>© 2025 Annisa Fitriani</p>
     </footer>
