--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <h2>Rekomendasi Buku</h2>
     <div class="container">
         <div class="book">
-            <a href="https://link-ke-ebook1.pdf" target="_blank">
-                <img src="cover1.jpg" alt="Empat Langkah Pengampunan">
+            <a href="https://drive.google.com/file/d/1wNBCOEhe2u6DJo5f7wy75618LmNaveuh/view?usp=drive_link" target="_blank">
+                <img src="tn_4stepscover-indonesian.jpg" alt="Empat Langkah Pengampunan">
             </a>
             <p>Empat Langkah Pengampunan</p>
         </div>
         <div class="book">
-            <a href="https://link-ke-ebook2.pdf" target="_blank">
-                <img src="cover2.jpg" alt="Islam’s Reformers">
+            <a href="https://drive.google.com/file/d/1eES0l8At0OLHqTR9gsCO77oSaDBYg73-/view?usp=drive_link" target="_blank">
+                <img src="B023.png" alt="Islam’s Reformers">
             </a>
             <p>Islam’s Reformers</p>
         </div>
