--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <h2>Event Kegiatan</h2>
         <div style="background-color: #f8f8f8; padding: 20px; border-radius: 12px; margin: 20px 0;">
             <div style="display: flex; align-items: center;">
-                <img src="poster-workshop.jpg" alt="Poster Workshop Menulis" style="width: 180px; height: auto; border-radius: 8px; margin-right: 20px;">
+                <img src="FtRGKx5GoV1vtOfGUa7do93pG4gbpKmPfLoNc1ma.jpg" alt="Library Literacy Fest" style="width: 180px; height: auto; border-radius: 8px; margin-right: 20px;">
                 <div>
                     <h3 style="color: #007bff; margin-bottom: 5px;">Workshop Menulis Cerpen: Imajinasi Tanpa Batas</h3>
                     <p><strong style="color: red;">Tanggal:</strong> 22 April 2025</p>
