--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                 <img src="FtRGKx5GoV1vtOfGUa7do93pG4gbpKmPfLoNc1ma.jpg" alt="Library Literacy Fest" style="width: 180px; height: auto; border-radius: 8px; margin-right: 20px;">
                 <div>
                     <h2 style="color: #007bff; margin-bottom: 5px;">Library Literacy Fest</h2>
-                    <p><strong style="color: red;">Tanggal:</strong> 22 April 2025</p>
-                    <p><em>Lokasi: Perpustakaan Pusat, Universitas Sastra Nusantara</em></p>
-                    <p>Workshop gratis untuk belajar menulis cerpen dari penulis profesional. Cocok untuk mahasiswa dan umum yang ingin mengasah kreativitas menulis!</p>
+                    <p><strong style="color: black;">Tanggal:</strong> 29 November-19 Desember 2024</p>
+                    <p><em>Lokasi: Perpustakaan UMS</em></p>
+                    <p>Library Literacy Fest diadakan oleh Perpustakaan dan Pusat Layanan Digital UMS dalam rangka meningkatkan kompetensi, kualitas publikasi, dan kebermanfaatan sumber referensi.</p>
                     <a href="#" style="background-color: #007bff; color: white; padding: 8px 16px; border-radius: 6px; text-decoration: none;">Info Selengkapnya</a>
                     <br><br>
                     <a href="#">Instagram</a> | 
