--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
                     <p><em>Lokasi: Perpustakaan UMS</em></p>
                     <p>Library Literacy Fest diadakan oleh Perpustakaan dan Pusat Layanan Digital UMS dalam rangka meningkatkan kompetensi, kualitas publikasi, dan kebermanfaatan sumber referensi.</p>
                     <a href="#" style="background-color: #007bff; color: white; padding: 8px 16px; border-radius: 6px; text-decoration: none;">Info Selengkapnya</a>
-                    <br><br>
-                    <a href="#">Instagram</a> | 
-                    <a href="#">Facebook</a> | 
-                    <a href="#">Twitter</a>
+                   <!-- Nomor WhatsApp -->
+      <p style="margin-top: 10px;">
+        📱 <strong>Hubungi via WhatsApp:</strong> 
+        <a href="https://wa.me/628122605573" target="_blank" style="color: green; text-decoration: none;">+62 812-3456-7890</a>
+      </p>
                 </div>
             </div>
         </div>
