--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <p><strong style="color: black;">Tanggal:</strong> 29 November-19 Desember 2024</p>
                     <p><em>Lokasi: Perpustakaan UMS</em></p>
                     <p>Library Literacy Fest diadakan oleh Perpustakaan dan Pusat Layanan Digital UMS dalam rangka meningkatkan kompetensi, kualitas publikasi, dan kebermanfaatan sumber referensi.</p>
-                    <a href="#" style="background-color: #007bff; color: white; padding: 8px 16px; border-radius: 6px; text-decoration: none;">Info Selengkapnya</a>
+                    <a href="#" style="background-color: #99ffff; color: white; padding: 8px 16px; border-radius: 6px; text-decoration: none;">Info Selengkapnya</a>
                    <!-- Nomor WhatsApp -->
       <p style="margin-top: 10px;">
         📱 <strong>Hubungi via WhatsApp:</strong> 
