--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div style="display: flex; align-items: center;">
                 <img src="FtRGKx5GoV1vtOfGUa7do93pG4gbpKmPfLoNc1ma.jpg" alt="Library Literacy Fest" style="width: 180px; height: auto; border-radius: 8px; margin-right: 20px;">
                 <div>
-                    <h2 style="color: #007bff; margin-bottom: 5px;">Library Literacy Fest</h2>
+                    <h2 style="color: #3366ff; margin-bottom: 5px;">Library Literacy Fest</h2>
                     <p><strong style="color: black;">Tanggal:</strong> 29 November-19 Desember 2024</p>
                     <p><em>Lokasi: Perpustakaan UMS</em></p>
                     <p>Library Literacy Fest diadakan oleh Perpustakaan dan Pusat Layanan Digital UMS dalam rangka meningkatkan kompetensi, kualitas publikasi, dan kebermanfaatan sumber referensi.</p>
