--- a/index.html
+++ b/index.html
@@ -51,18 +51,16 @@
             </div>
         </div>
     </section>
-    <!-- EVENT WORKSHOP -->
         <h2>Event Kegiatan</h2>
-        <div style="background-color: #f8f8f8; padding: 20px; border-radius: 12px; margin: 20px;">
-            <div style="display: flex; align-items: center;">
-                <img src="FtRGKx5GoV1vtOfGUa7do93pG4gbpKmPfLoNc1ma.jpg" alt="Library Literacy Fest" style="width: 180px; height: auto; border-radius: 8px; margin-right: 20px;">
-                <div>
-                    <h2 style="color: #3366ff; margin-bottom: 5px;">Library Literacy Fest</h2>
-                    <p><strong style="color: black;">Tanggal:</strong> 29 November-19 Desember 2024</p>
-                    <p><em>Lokasi: Perpustakaan UMS</em></p>
-                    <p>Library Literacy Fest diadakan oleh Perpustakaan dan Pusat Layanan Digital UMS dalam rangka meningkatkan kompetensi, kualitas publikasi, dan kebermanfaatan sumber referensi.</p>
-                    <a href="#" style="background-color: #3366ff; color: #f0f8ff; padding: 8px 16px; border-radius: 6px; text-decoration: none;">Info Selengkapnya</a>
-                   <!-- Nomor WhatsApp -->
+<div style="background-color: #FFFDD0; padding: 20px; border-radius: 12px; margin: 20px;">
+    <div style="display: flex; align-items: center;">
+        <img src="FtRGKx5GoV1vtOfGUa7do93pG4gbpKmPfLoNc1ma.jpg" alt="Library Literacy Fest" style="width: 180px; height: auto; border-radius: 8px; margin-right: 20px;">
+        <div>
+            <h2 style="color: #3366ff; margin-bottom: 5px;">Library Literacy Fest</h2>
+            <p><strong style="color: black;">Tanggal:</strong> 29 November-19 Desember 2024</p>
+            <p><em>Lokasi: Perpustakaan UMS</em></p>
+            <p>Library Literacy Fest diadakan oleh Perpustakaan dan Pusat Layanan Digital UMS dalam rangka meningkatkan kompetensi, kualitas publikasi, dan kebermanfaatan sumber referensi.</p>
+            <a href="#" style="background-color: #3366ff; color: #f0f8ff; padding: 8px 16px; border-radius: 6px; text-decoration: none;">Info Selengkapnya</a>
       <p style="margin-top: 10px;">
         📱 <strong>Hubungi via WhatsApp:</strong> 
         <a href="https://wa.me/628122605573" target="_blank" style="color: green; text-decoration: none;">+62 812-3456-7890</a>
