--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="about.html" class="button">About Me</a>
             <a href="contact-us.html" class="button">Hubungi Kami</a>
-            <a href="tabel.html" class="button">Tabel Perkalian</a> <!-- Tambahan tautan ini -->
+            <a href="tabel.html" class="button">Tabel Perkalian</a> <!-- tabel.html -->
         </nav>
     </header>
     
