--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="about.html" class="button">About Me</a>
             <a href="contact-us.html" class="button">Hubungi Kami</a>
             <a href="tabel.html" class="button">Tabel Perkalian</a> <!-- tabel.html -->
-            <a href="formulir kunjungan" class="button">formulir.html</a>
+            <a href="formulir.html" class="button">Formulir Kunjungan</a>
         </nav>
     </header>
     
